src/test/ui/did_you_mean/issue-40396.stderr
error: chained comparison operators require parentheses
  --> $DIR/issue-40396.rs:2:20
   |
LL |     (0..13).collect<Vec<i32>>();
   |                    ^^^^^^^^
   |
   = help: use `::<...>` instead of `<...>` if you meant to specify type arguments
   = help: or use `(...)` if you meant to specify fn arguments

error: chained comparison operators require parentheses
  --> $DIR/issue-40396.rs:7:8
   |
LL |     Vec<i32>::new();
   |        ^^^^^^^
   |
   = help: use `::<...>` instead of `<...>` if you meant to specify type arguments
   = help: or use `(...)` if you meant to specify fn arguments

error: chained comparison operators require parentheses
  --> $DIR/issue-40396.rs:12:20
   |
LL |     (0..13).collect<Vec<i32>();
   |                    ^^^^^^^^
   |
   = help: use `::<...>` instead of `<...>` if you meant to specify type arguments
   = help: or use `(...)` if you meant to specify fn arguments

error: aborting due to 3 previous errors

